# scribus-plugin-export-epub

./: README.md  doxygen.cfg
src/: CMakeLists.txt  epubexport.cpp  epubexport.h  epubexportplugin.cpp  epubexportplugin.h
src/module/: epubexportContent.cpp  epubexportContent.h  epubexportEpubfile.cpp  epubexportEpubfile.h  epubexportImage.cpp  epubexportImage.h  epubexportScribusDoc.cpp  epubexportScribusDoc.h  epubexportScribusDocument.cpp  epubexportScribusDocument.h  epubexportScribusDocumentItem.cpp  epubexportScribusDocumentItem.h  epubexportStructure.cpp  epubexportStructure.h  epubexportXhtml.cpp  epubexportXhtml.h  epubexportZip.cpp  epubexportZip.h  scribusAPIDocument.cpp  scribusAPIDocument.h  scribusAPIDocumentItem.cpp  scribusAPIDocumentItem.h  scribusAPIDocumentItemFormatting.cpp  scribusAPIDocumentItemFormatting.h  scribusAPIDocumentStyle.cpp  scribusAPIDocumentStyle.h
src/ui/: epubexportdialog.cpp  epubexportdialog.h  epubexportdialog.ui
test/: one_text_frame.sla
test/samples/image_frame/: image_frame.sla
test/samples/multiple_text_frames/: multiple_text_frames.sla
test/samples/text_footnote/: text-with one footnote.sla
test/samples/text_formatting/: one_text_frame_with_formatting.sla
test/samples/text_frame/: one_text_frame.sla
test/samples/text_list/: direct-and-style-lists.sla
